--- a/projects/signupForm/src/components/Card/Card.css
+++ b/projects/signupForm/src/components/Card/Card.css
@@ -11,3 +11,18 @@
     top: 22%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
+
+@media (max-width: 600px){
+    .Card{
+        width: 70%;
+        margin: 50% -4%;
+        padding: .5rem;
+    }
+}
+
+@media (max-width: 400px){
+    .Card{
+        transform: scale(.95);
+        margin-bottom: 3%;
+    }
+}
