--- a/projects/signupForm/src/components/Input/Input.css
+++ b/projects/signupForm/src/components/Input/Input.css
@@ -21,3 +21,9 @@
     margin-left: 93%;
     transform: translateY(-140%);
 }
+
+@media (max-width: 600px){
+    .img{
+        margin-left: 88.5%;
+    }
+}
